--- a/fronted_1024shop/package.json
+++ b/fronted_1024shop/package.json
@@ -21,6 +21,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "prettier": "2.8.4",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.4"
