新增优惠券页面、地址管理页面、购物车页面，添加验证码接口

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "underscore": "^1.13.6",
     "vant": "^3.6.11",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "lodash": "^4.17.21",
+    "qs": "^6.11.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
