--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   "dependencies": {
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
+    "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.33",
+    "qs": "^6.11.1",
     "underscore": "^1.13.6",
     "vant": "^3.6.11",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6",
-    "lodash": "^4.17.21",
-    "qs": "^6.11.1"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@vant/area-data": "^1.4.1",
     "@vitejs/plugin-vue": "^4.0.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
